objects/Closed_Case_Email_Handler_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Closed Case Email Handler Settings</description>
    <fields>
        <fullName>Default_Status__c</fullName>
        <defaultValue>&apos;New&apos;</defaultValue>
        <description>The Status of the new Case created when the existing Case is closed</description>
        <inlineHelpText>The Status of the new Case created when the existing Case is closed</inlineHelpText>
        <label>Default Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_To_Clone__c</fullName>
        <defaultValue>&apos;Description, AccountId, ContactId, AssetId, Origin, ContactEmail, Subject, Type, Category__c, Subcategory__c&apos;</defaultValue>
        <description>Comma separated list of fields to clone from the closed Case to the new Case</description>
        <inlineHelpText>Comma separated list of fields to clone from the closed Case to the new Case</inlineHelpText>
        <label>Fields To Clone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Closed__c</fullName>
        <defaultValue>48</defaultValue>
        <description>How long the Case has been closed for in order to make a new Case</description>
        <inlineHelpText>How long the Case has been closed for in order to make a new Case</inlineHelpText>
        <label>Hours Since Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_Run_Assignment_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the new Case will be assigned using default assignment rules</description>
        <inlineHelpText>If checked, the new Case will be assigned using default assignment rules</inlineHelpText>
        <label>Re-Run Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>Closed Case Email Handler Settings</label>
</CustomObject>